--- a/RedditList/Base.lproj/Main.storyboard
+++ b/RedditList/Base.lproj/Main.storyboard
@@ -17,12 +17,39 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="34e-9v-zdS">
+                                <rect key="frame" x="50" y="244" width="314" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P7w-IK-lne">
+                                <rect key="frame" x="50" y="324" width="314" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="34e-9v-zdS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="4t7-xN-6hf"/>
+                            <constraint firstItem="P7w-IK-lne" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="PvN-6c-t4t"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="P7w-IK-lne" secondAttribute="trailing" constant="50" id="iIj-uZ-bcJ"/>
+                            <constraint firstItem="34e-9v-zdS" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="200" id="lgQ-Uz-EKG"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="34e-9v-zdS" secondAttribute="trailing" constant="50" id="mfd-XC-Tj3"/>
+                            <constraint firstItem="P7w-IK-lne" firstAttribute="top" secondItem="34e-9v-zdS" secondAttribute="bottom" constant="80" id="oAF-EA-4Xv"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="lbl11" destination="34e-9v-zdS" id="kuT-rp-ImW"/>
+                        <outlet property="lbl22" destination="P7w-IK-lne" id="XLp-VJ-MDe"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="44.927536231884062" y="45.535714285714285"/>
         </scene>
     </scenes>
 </document>
